* first stab at scripted content documents and xhtml rs conf reqs * remove filename shoulds for entities, not needed since we dont allow external general entities * replace all references to rfc2396 with rfc3986 * references: turn back idpf.org spec links in references to rel uris * change "external resource" to "supplementary resource" to avoid confusion re location properties * add xref to cssviewport gloss, but not defined yet * mess with the note and caution titles, supposed to float over parent box, and supposed to break in IE<9

--- a/trunk/src/spec/css/epub-spec.css
+++ b/trunk/src/spec/css/epub-spec.css
@@ -34,6 +34,14 @@ dd > dl {
 }
 
 /***************************************************************************/
+/*    ul      **************************************************************/
+/***************************************************************************/
+
+ul.conformance-list li {
+    list-style-type: none;
+}
+
+/***************************************************************************/
 /*  glosslist      *********************************************************/
 /***************************************************************************/
 
@@ -64,7 +72,7 @@ p.informative, p.normative {
 /*  misc inline      *******************************************************/
 /***************************************************************************/
 
-code {
+code, span.property {
     color: #660099;
     font-family: monospace;
     font-weight: bold
@@ -208,32 +216,37 @@ pre.synopsis {
 
 .caution .note {
     font-style : italic;
-    /*border: 1px solid rgb(240,240,240);*/
+    font-size : .9em;
 }
 
 div.note, div.caution {
-	margin: 1em 2em;
+	margin: 2em 1em;
 	border: solid gray 1px;
 	background-color: rgb(255,255,224);
 	padding: .5em
 }
 
+ 
 div.caution {
     background-color: rgb(255,235,205)
 }
 
 div.note > *, div.caution > * {
-	margin: .25em 0em;
-	padding: 0em;
+	/* margin: .25em 0em;
+	padding: 0em; */
 }
 
 div.note > h2, div.note > h3, div.note > h4, div.note > h5,
 div.caution > h2, div.caution > h3, div.caution > h4, div.caution > h5 {
 	font-size: 1em;
-	font-weight: bold;
+	font-style: italic;
+	font-variant: small-caps;
 	float: left;
-	padding: .18em 0em 0em 0em;
-	margin: 0em
+	padding: .18em .6em .18em .5em;	
+	margin: -1em -0.5em -0.5em auto;
+	width: auto; 
+	border: solid 1px; 
+	background: white; 
 }
 
 /***************************************************************************/
